--- a/handsOn_lecture17_clustering-mixtures-em/handsOn_lecture17_clustering-mixtures-em.ipynb
+++ b/handsOn_lecture17_clustering-mixtures-em/handsOn_lecture17_clustering-mixtures-em.ipynb
@@ -192,8 +192,7 @@
     "\n",
     "The $\\log p(Z)$ term is constant wrt $\\theta$, so we ignore it.\n",
     "> Recall $q \\equiv q_{\\theta_t} = p(Z | \\X,\\theta_t)$\n",
-    "TYPO FIXED!\n",
-    "$$\n",
+    "\n",
     "\\begin{align}\n",
     "E_q[\\log p(\\X | Z, \\theta)]\n",
     "&= \\sum_{n=1}^N E_q \\bigg[\n",
@@ -205,8 +204,7 @@
     "&+ \\sum_{n=1}^N q_\\vartheta(z_n=B)\n",
     "    \\bigg[ x_n \\log \\theta_B + (M-x_n) {\\color{red}{\\log (1-\\theta_B)}} \\bigg]\n",
     " + \\text{const.}\n",
-    "\\end{align}\n",
-    "$$\n"
+    "\\end{align}\n"
    ]
   },
   {
@@ -421,21 +419,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
